# med-history-agent

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agent/: llm.py
backend/app/agent/summarization/: service.py
backend/app/agent/transcription/: service.py
backend/app/agent/tts/: service.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: consultation.py  patients.py  tts.py
backend/app/auth/: deps.py  refresh_store.py  router.py  user_store.py
backend/app/clinical/: context.py  patient.py  patient_store.py  session_store.py
backend/app/clinical/questionnaire/: engine.py  models.py
backend/app/clinical/services/: completeness.py  diagnosis.py  prescription.py  translation.py
backend/app/core/: config.py  database.py  ratelimit.py
backend/app/storage/: r2.py
frontend/: .env.local.example  .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/consultation/[sessionId]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/patients/: page.tsx
frontend/app/patients/[id]/: page.tsx
frontend/app/patients/[id]/consult/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: AIAvatar.tsx  FlagBadge.tsx  ProcessingScreen.tsx  QuestionnaireScreen.tsx  ResultsScreen.tsx  ReviewScreen.tsx  VoiceRecorder.tsx
frontend/lib/: api.ts  auth.ts  types.ts
